--- a/Main.html
+++ b/Main.html
@@ -34,7 +34,7 @@
     <section class="u-black u-clearfix u-section-1" id="sec-370f">
       <div class="u-clearfix u-sheet u-sheet-1">
         <img class="custom-expanded u-image u-image-round u-radius-10 u-image-1" alt="infinity loop at abu dhabi indian school" data-image-width="1200" data-image-height="675" src="images/651417775-0.jpeg" data-animation-name="customAnimationIn" data-animation-duration="1000">
-        <h1 class="u-custom-font u-text u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1000"> WRITE YOUR OWN STORY</h1>
+        <h1 class="u-align-center-xs u-custom-font u-text u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1000"> WRITE YOUR OWN STORY</h1>
         <a href="https://www.ted.com/tedx/events/55539" class="u-btn u-button-style u-custom-color-2 u-hover-custom-color-1 u-hover-feature u-btn-1" data-animation-name="customAnimationIn" data-animation-duration="1000" target="_blank">Event Details</a>
       </div>
       
@@ -108,16 +108,5 @@ background-color: #000000 !important
     <footer class="u-align-center u-black u-clearfix u-footer u-footer" id="sec-0443"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-small-text u-text u-text-custom-color-2 u-text-variant u-text-1">Made by TEDxADIS Muroor Team</p>
       </div></footer>
-    <section class="u-backlink u-clearfix u-grey-80">
-      <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
-        <span>Website Templates</span>
-      </a>
-      <p class="u-text">
-        <span>created with</span>
-      </p>
-      <a class="u-link" href="" target="_blank">
-        <span>Website Builder Software</span>
-      </a>. 
-    </section>
   
 </body></html>
