--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section class="u-black u-clearfix u-section-1" id="sec-370f">
       <div class="u-clearfix u-sheet u-sheet-1">
         <img class="custom-expanded u-image u-image-round u-radius-10 u-image-1" alt="infinity loop at abu dhabi indian school" data-image-width="1200" data-image-height="675" src="images/651417775-0.jpeg" data-animation-name="customAnimationIn" data-animation-duration="1000">
-        <h1 class="u-custom-font u-text u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1000"> WRITE YOUR OWN STORY</h1>
+        <h1 class="u-align-center-xs u-custom-font u-text u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1000"> WRITE YOUR OWN STORY</h1>
         <a href="https://www.ted.com/tedx/events/55539" class="u-btn u-button-style u-custom-color-2 u-hover-custom-color-1 u-hover-feature u-btn-1" data-animation-name="customAnimationIn" data-animation-duration="1000" target="_blank">Event Details</a>
       </div>
       
@@ -65,7 +65,7 @@
               <div class="u-align-left u-container-style u-layout-cell u-left-cell u-size-32-md u-size-32-sm u-size-32-xs u-size-36-lg u-size-36-xl u-layout-cell-1">
                 <div class="u-container-layout u-valign-middle u-container-layout-1">
                   <h2 class="u-custom-font u-text u-text-custom-color-2 u-text-default u-text-1">Follow us</h2>
-                  <p class="u-text u-text-2">John Cena who?</p>
+                  <p class="u-text u-text-2">Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo sagittis suscipit ultrices.</p>
                   <a href="" class="u-border-2 u-border-grey-75 u-btn u-button-style u-custom-color-2 u-hover-custom-color-1 u-btn-1">Email us</a>
                 </div>
               </div>
@@ -108,5 +108,16 @@ background-color: #000000 !important
     <footer class="u-align-center u-black u-clearfix u-footer u-footer" id="sec-0443"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-small-text u-text u-text-custom-color-2 u-text-variant u-text-1">Made by TEDxADIS Muroor Team</p>
       </div></footer>
+    <section class="u-backlink u-clearfix u-grey-80">
+      <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
+        <span>Website Templates</span>
+      </a>
+      <p class="u-text">
+        <span>created with</span>
+      </p>
+      <a class="u-link" href="" target="_blank">
+        <span>Website Builder Software</span>
+      </a>. 
+    </section>
   
 </body></html>
