--- a/index.html
+++ b/index.html
@@ -32,9 +32,44 @@
         <img class="u-image u-image-contain u-image-default u-image-1" src="images/logo-white.png" alt="" data-image-width="2530" data-image-height="701" data-animation-name="customAnimationIn" data-animation-duration="1000">
       </div></header>
     <section class="u-black u-clearfix u-section-1" id="sec-370f">
-      <div class="u-clearfix u-sheet u-sheet-1">
-        <img class="custom-expanded u-image u-image-round u-radius-10 u-image-1" alt="infinity loop at abu dhabi indian school" data-image-width="1200" data-image-height="675" src="images/651417775-0.jpeg" data-animation-name="customAnimationIn" data-animation-duration="1000">
+      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-sheet-1">
         <h1 class="u-align-center-xs u-custom-font u-text u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1000"> WRITE YOUR OWN STORY</h1>
+        <div class="u-countdown u-countdown-1" data-timer-id="7f74" data-type="to-date" data-target-date="Wed, 25 Oct 2023 20:00:52 GMT" data-for="everyone" data-direction="down">
+          <div class="u-countdown-wrapper u-spacing-20">
+            <div class="u-countdown-item u-countdown-years u-hidden u-spacing-10">
+              <div class="u-countdown-counter u-custom-font u-countdown-counter-1"><div class="u-countdown-number">0</div><div class="u-countdown-number u-hidden">0</div></div>
+              <div class="u-countdown-label u-custom-font u-countdown-label-1">Years</div>
+            </div>
+            <div class="u-countdown-separator u-custom-font u-hidden u-countdown-separator-1">:</div>
+            <div class="u-countdown-days u-countdown-item u-spacing-10">
+              <div class="u-countdown-counter u-custom-font u-countdown-counter-2"><div class="u-countdown-number">3</div><div class="u-countdown-number">4</div><div class="u-countdown-number u-hidden">0</div></div>
+              <div class="u-countdown-label u-custom-font u-countdown-label-2">Days</div>
+            </div>
+            <div class="u-countdown-separator u-custom-font u-countdown-separator-2">:</div>
+            <div class="u-countdown-hours u-countdown-item u-spacing-10">
+              <div class="u-countdown-counter u-custom-font u-countdown-counter-3"><div class="u-countdown-number">0</div><div class="u-countdown-number">9</div></div>
+              <div class="u-countdown-label u-custom-font u-countdown-label-3">Hours</div>
+            </div>
+            <div class="u-countdown-separator u-custom-font u-countdown-separator-3">:</div>
+            <div class="u-countdown-item u-countdown-minutes u-spacing-10">
+              <div class="u-countdown-counter u-custom-font u-countdown-counter-4"><div class="u-countdown-number">2</div><div class="u-countdown-number">2</div></div>
+              <div class="u-countdown-label u-custom-font u-countdown-label-4">Minutes</div>
+            </div>
+            <div class="u-countdown-separator u-custom-font u-countdown-separator-4">:</div>
+            <div class="u-countdown-item u-countdown-seconds u-spacing-10">
+              <div class="u-countdown-counter u-custom-font u-countdown-counter-5"><div class="u-countdown-number">3</div><div class="u-countdown-number">7</div></div>
+              <div class="u-countdown-label u-custom-font u-countdown-label-5">Seconds</div>
+            </div>
+            <div class="u-countdown-separator u-custom-font u-hidden u-countdown-separator-5">:</div>
+            <div class="u-countdown-item u-countdown-numbers u-hidden u-spacing-10">
+              <div class="u-countdown-counter u-custom-font u-countdown-counter-6"><div class="u-countdown-number">0</div><div class="u-countdown-number">0</div></div>
+              <div class="u-countdown-label u-custom-font u-countdown-label-6">Items</div>
+            </div>
+          </div>
+          <div class="u-countdown-message u-hidden">
+            <p>Sorry, the time is up.</p>
+          </div>
+        </div>
         <a href="https://www.ted.com/tedx/events/55539" class="u-btn u-button-style u-custom-color-2 u-hover-custom-color-1 u-hover-feature u-btn-1" data-animation-name="customAnimationIn" data-animation-duration="1000" target="_blank">Event Details</a>
       </div>
       
