--- a/Main.html
+++ b/Main.html
@@ -2,7 +2,7 @@
 <html style="font-size: 16px;" lang="en"><head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="​WRITE YOUR OWN STORY, Follow us">
+    <meta name="keywords" content="">
     <meta name="description" content="">
     <title>Main</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
@@ -22,10 +22,11 @@
     <script type="application/ld+json">{
 		"@context": "http://schema.org",
 		"@type": "Organization",
-		"name": ""
+		"name": "Site1"
 }</script>
     <meta name="theme-color" content="#478ac9">
     <meta property="og:title" content="Main">
+    <meta property="og:description" content="">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
   <body data-path-to-root="./" class="u-body u-overlap u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-header" id="sec-eb9e"><div class="u-clearfix u-sheet u-sheet-1">
@@ -100,7 +101,7 @@
               <div class="u-align-left u-container-style u-layout-cell u-left-cell u-size-32-md u-size-32-sm u-size-32-xs u-size-36-lg u-size-36-xl u-layout-cell-1">
                 <div class="u-container-layout u-valign-middle u-container-layout-1">
                   <h2 class="u-custom-font u-text u-text-custom-color-2 u-text-default u-text-1">Follow us</h2>
-                  <p class="u-text u-text-2">Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo sagittis suscipit ultrices.</p>
+                  <p class="u-text u-text-2">John Cena who?</p>
                   <a href="" class="u-border-2 u-border-grey-75 u-btn u-button-style u-custom-color-2 u-hover-custom-color-1 u-btn-1">Email us</a>
                 </div>
               </div>
