--- a/thank-you-page.html
+++ b/thank-you-page.html
@@ -17,10 +17,11 @@
     <script type="application/ld+json">{
 		"@context": "http://schema.org",
 		"@type": "Organization",
-		"name": ""
+		"name": "Site1"
 }</script>
     <meta name="theme-color" content="#478ac9">
     <meta property="og:title" content="Thank You Page Template">
+    <meta property="og:description" content="">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
   <body data-path-to-root="./" class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-header" id="sec-eb9e"><div class="u-clearfix u-sheet u-sheet-1">
@@ -38,16 +39,5 @@
     <footer class="u-align-center u-black u-clearfix u-footer u-footer" id="sec-0443"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-small-text u-text u-text-custom-color-2 u-text-variant u-text-1">Made by TEDxADIS Muroor Team</p>
       </div></footer>
-    <section class="u-backlink u-clearfix u-grey-80">
-      <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
-        <span>Website Templates</span>
-      </a>
-      <p class="u-text">
-        <span>created with</span>
-      </p>
-      <a class="u-link" href="" target="_blank">
-        <span>Website Builder Software</span>
-      </a>. 
-    </section>
   
 </body></html>
