--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="keywords" content="">
     <meta name="description" content="">
-    <title>Main</title>
+    <title>TEDxADIS Muroor Youth</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="Main.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
