--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         <img class="u-image u-image-contain u-image-default u-image-1" src="images/logo-white.png" alt="" data-image-width="2530" data-image-height="701" data-animation-name="customAnimationIn" data-animation-duration="1000">
       </div></header>
     <section class="u-black u-clearfix u-section-1" id="sec-370f">
-      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-sheet-1">
+      <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-align-center-xs u-custom-font u-text u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1000"> WRITE YOUR OWN STORY</h1>
-        <div class="u-countdown u-countdown-1" data-timer-id="7f74" data-type="to-date" data-target-date="Wed, 25 Oct 2023 20:00:52 GMT" data-for="everyone" data-direction="down">
+        <div class="u-countdown u-countdown-1" data-timer-id="7f74" data-type="to-date" data-target-date="Wed, 25 Oct 2023 20:00:52 GMT" data-for="everyone" data-direction="down" data-animation-name="customAnimationIn" data-animation-duration="1000">
           <div class="u-countdown-wrapper u-spacing-20">
             <div class="u-countdown-item u-countdown-years u-hidden u-spacing-10">
               <div class="u-countdown-counter u-custom-font u-countdown-counter-1"><div class="u-countdown-number">0</div><div class="u-countdown-number u-hidden">0</div></div>
@@ -102,30 +102,20 @@
                 <div class="u-container-layout u-valign-middle u-container-layout-1">
                   <h2 class="u-custom-font u-text u-text-custom-color-2 u-text-default u-text-1">Follow us</h2>
                   <p class="u-text u-text-2">John Cena who?</p>
-                  <a href="" class="u-border-2 u-border-grey-75 u-btn u-button-style u-custom-color-2 u-hover-custom-color-1 u-btn-1">Email us</a>
+                  <a href="mailto:tedxadismuroor@gmail.com" class="u-border-2 u-border-grey-75 u-btn u-button-style u-custom-color-2 u-hover-custom-color-1 u-btn-1">Email us</a>
                 </div>
               </div>
               <div class="u-align-left-sm u-align-left-xs u-align-right-lg u-align-right-md u-align-right-xl u-container-style u-layout-cell u-right-cell u-size-24-lg u-size-24-xl u-size-28-md u-size-28-sm u-size-28-xs u-layout-cell-2">
                 <div class="u-container-layout u-valign-middle u-container-layout-2">
                   <div class="u-align-center-xs u-social-icons u-spacing-59 u-social-icons-1">
-                    <a class="u-social-url" title="twitter" target="_blank" href="https://twitter.com/name"><span class="u-icon u-social-icon u-social-twitter u-text-custom-color-2"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-c508"></use></svg><svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-c508"><path fill="currentColor" d="M92.2,38.2c0,0.8,0,1.6,0,2.3c0,24.3-18.6,52.4-52.6,52.4c-10.6,0.1-20.2-2.9-28.5-8.2
-	c1.4,0.2,2.9,0.2,4.4,0.2c8.7,0,16.7-2.9,23-7.9c-8.1-0.2-14.9-5.5-17.3-12.8c1.1,0.2,2.4,0.2,3.4,0.2c1.6,0,3.3-0.2,4.8-0.7
-	c-8.4-1.6-14.9-9.2-14.9-18c0-0.2,0-0.2,0-0.2c2.5,1.4,5.4,2.2,8.4,2.3c-5-3.3-8.3-8.9-8.3-15.4c0-3.4,1-6.5,2.5-9.2
-	c9.1,11.1,22.7,18.5,38,19.2c-0.2-1.4-0.4-2.8-0.4-4.3c0.1-10,8.3-18.2,18.5-18.2c5.4,0,10.1,2.2,13.5,5.7c4.3-0.8,8.1-2.3,11.7-4.5
-	c-1.4,4.3-4.3,7.9-8.1,10.1c3.7-0.4,7.3-1.4,10.6-2.9C98.9,32.3,95.7,35.5,92.2,38.2z"></path></svg></span>
-                    </a>
-                    <a class="u-social-url" title="instagram" target="_blank" href="https://instagram.com/name"><span class="u-icon u-social-icon u-social-instagram u-text-custom-color-2"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-9d85"></use></svg><svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-9d85"><path fill="currentColor" d="M55.9,32.9c-12.8,0-23.2,10.4-23.2,23.2s10.4,23.2,23.2,23.2s23.2-10.4,23.2-23.2S68.7,32.9,55.9,32.9z
+                    <a class="u-social-url" title="instagram" target="_blank" href="https://instagram.com/tedxadismuroor"><span class="u-icon u-social-icon u-social-instagram u-text-custom-color-2"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-9d85"></use></svg><svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-9d85"><path fill="currentColor" d="M55.9,32.9c-12.8,0-23.2,10.4-23.2,23.2s10.4,23.2,23.2,23.2s23.2-10.4,23.2-23.2S68.7,32.9,55.9,32.9z
 	 M55.9,69.4c-7.4,0-13.3-6-13.3-13.3c-0.1-7.4,6-13.3,13.3-13.3s13.3,6,13.3,13.3C69.3,63.5,63.3,69.4,55.9,69.4z"></path><path fill="#FFFFFF" d="M79.7,26.8c-3,0-5.4,2.5-5.4,5.4s2.5,5.4,5.4,5.4c3,0,5.4-2.5,5.4-5.4S82.7,26.8,79.7,26.8z"></path><path fill="currentColor" d="M78.2,11H33.5C21,11,10.8,21.3,10.8,33.7v44.7c0,12.6,10.2,22.8,22.7,22.8h44.7c12.6,0,22.7-10.2,22.7-22.7
 	V33.7C100.8,21.1,90.6,11,78.2,11z M91,78.4c0,7.1-5.8,12.8-12.8,12.8H33.5c-7.1,0-12.8-5.8-12.8-12.8V33.7
 	c0-7.1,5.8-12.8,12.8-12.8h44.7c7.1,0,12.8,5.8,12.8,12.8V78.4z"></path></svg></span>
                     </a>
-                    <a class="u-social-url" target="_blank" data-type="Custom" title="Custom" href=""><span class="u-icon u-social-custom u-social-icon u-text-custom-color-2 u-icon-3"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 512 512" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-ff0d"></use></svg><svg class="u-svg-content" viewBox="0 0 512 512" x="0px" y="0px" id="svg-ff0d" style="enable-background:new 0 0 512 512;"><g><g><rect y="160" width="114.496" height="352"></rect>
-</g>
-</g><g><g><path d="M426.368,164.128c-1.216-0.384-2.368-0.8-3.648-1.152c-1.536-0.352-3.072-0.64-4.64-0.896    c-6.08-1.216-12.736-2.08-20.544-2.08c-66.752,0-109.088,48.544-123.04,67.296V160H160v352h114.496V320    c0,0,86.528-120.512,123.04-32c0,79.008,0,224,0,224H512V274.464C512,221.28,475.552,176.96,426.368,164.128z"></path>
-</g>
-</g><g><g><circle cx="56" cy="56" r="56"></circle>
-</g>
-</g></svg></span>
+                    <a class="u-social-url" target="_blank" data-type="Custom" title="Custom" href=""><span class="u-file-icon u-icon u-social-custom u-social-icon u-text-custom-color-2 u-icon-2"><img src="images/4494467-b2f8fa9d.png" alt=""></span>
+                    </a>
+                    <a class="u-social-url" target="_blank" data-type="Custom" title="Custom" href=""><span class="u-file-icon u-icon u-social-custom u-social-icon u-text-custom-color-2 u-icon-3"><img src="images/1384014-abf010a5.png" alt=""></span>
                     </a>
                   </div>
                 </div>
