--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="keywords" content="">
     <meta name="description" content="">
-    <title>TEDxADIS Muroor Youth</title>
+    <title>Main</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="Main.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
@@ -132,7 +132,9 @@ background-color: #000000 !important
     
     
     <footer class="u-align-center u-black u-clearfix u-footer u-footer" id="sec-0443"><div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-small-text u-text u-text-custom-color-2 u-text-variant u-text-1">Made by TEDxADIS Muroor Team</p>
+        <p class="u-small-text u-text u-text-custom-color-2 u-text-variant u-text-1">
+          <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-custom-color-2 u-btn-1" data-href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" data-target="_blank">Made by TEDxADIS Muroor Team</a>
+        </p>
       </div></footer>
   
 </body></html>
