--- a/thank-you-page.html
+++ b/thank-you-page.html
@@ -37,7 +37,9 @@
     
     
     <footer class="u-align-center u-black u-clearfix u-footer u-footer" id="sec-0443"><div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-small-text u-text u-text-custom-color-2 u-text-variant u-text-1">Made by TEDxADIS Muroor Team</p>
+        <p class="u-small-text u-text u-text-custom-color-2 u-text-variant u-text-1">
+          <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-custom-color-2 u-btn-1" data-href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" data-target="_blank">Made by TEDxADIS Muroor Team</a>
+        </p>
       </div></footer>
   
 </body></html>
