--- a/TEDxADIS-Muroor-Youth.html
+++ b/TEDxADIS-Muroor-Youth.html
@@ -30,7 +30,7 @@
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body data-home-page="TEDxADIS-Muroor-Youth.html" data-home-page-title="TEDxADIS Muroor Youth" data-path-to-root="./" class="u-body u-overlap u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-header" id="sec-eb9e"><div class="u-clearfix u-sheet u-sheet-1">
+  <body data-path-to-root="./" class="u-body u-overlap u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-header" id="sec-eb9e"><div class="u-clearfix u-sheet u-sheet-1">
         <img class="u-image u-image-contain u-image-default u-image-1" src="images/logo-white.png" alt="" data-image-width="2530" data-image-height="701" data-animation-name="customAnimationIn" data-animation-duration="1000">
       </div></header>
     <section class="u-black u-clearfix u-section-1" id="sec-370f">
