--- a/index.html
+++ b/index.html
@@ -153,12 +153,9 @@
               <div class="u-align-left-sm u-align-left-xs u-align-right-lg u-align-right-md u-align-right-xl u-container-style u-layout-cell u-right-cell u-size-24-lg u-size-24-xl u-size-28-md u-size-28-sm u-size-28-xs u-layout-cell-2">
                 <div class="u-container-layout u-valign-middle u-container-layout-2">
                   <div class="u-align-center-xs u-social-icons u-spacing-59 u-social-icons-1">
-                    <a class="u-social-url" title="instagram" target="_blank" href="https://instagram.com/tedxadismuroor"><span class="u-icon u-social-icon u-social-instagram u-text-custom-color-2"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-9d85"></use></svg><svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-9d85"><path fill="currentColor" d="M55.9,32.9c-12.8,0-23.2,10.4-23.2,23.2s10.4,23.2,23.2,23.2s23.2-10.4,23.2-23.2S68.7,32.9,55.9,32.9z
-	 M55.9,69.4c-7.4,0-13.3-6-13.3-13.3c-0.1-7.4,6-13.3,13.3-13.3s13.3,6,13.3,13.3C69.3,63.5,63.3,69.4,55.9,69.4z"></path><path fill="#FFFFFF" d="M79.7,26.8c-3,0-5.4,2.5-5.4,5.4s2.5,5.4,5.4,5.4c3,0,5.4-2.5,5.4-5.4S82.7,26.8,79.7,26.8z"></path><path fill="currentColor" d="M78.2,11H33.5C21,11,10.8,21.3,10.8,33.7v44.7c0,12.6,10.2,22.8,22.7,22.8h44.7c12.6,0,22.7-10.2,22.7-22.7
-	V33.7C100.8,21.1,90.6,11,78.2,11z M91,78.4c0,7.1-5.8,12.8-12.8,12.8H33.5c-7.1,0-12.8-5.8-12.8-12.8V33.7
-	c0-7.1,5.8-12.8,12.8-12.8h44.7c7.1,0,12.8,5.8,12.8,12.8V78.4z"></path></svg></span>
+                    <a class="u-social-url" target="_blank" data-type="Custom" title="Instagram" href="https://instagram.com/tedxadismuroor"><span class="u-file-icon u-icon u-social-custom u-social-icon u-text-custom-color-2 u-icon-1"><img src="images/1384015-8ce1958c.png" alt=""></span>
                     </a>
-                    <a class="u-social-url" target="_blank" data-type="Custom" title="Custom" href=""><span class="u-file-icon u-icon u-social-custom u-social-icon u-text-custom-color-2 u-icon-2"><img src="images/4494467-b2f8fa9d.png" alt=""></span>
+                    <a class="u-social-url" target="_blank" data-type="Custom" title="youtube" href="https://www.youtube.com/@TEDxADIS"><span class="u-file-icon u-icon u-social-custom u-social-icon u-text-custom-color-2 u-icon-2"><img src="images/4494467-b2f8fa9d.png" alt=""></span>
                     </a>
                     <a class="u-social-url" target="_blank" data-type="Custom" title="Custom" href=""><span class="u-file-icon u-icon u-social-custom u-social-icon u-text-custom-color-2 u-icon-3"><img src="images/1384014-abf010a5.png" alt=""></span>
                     </a>
