--- a/thank-you-page.html
+++ b/thank-you-page.html
@@ -23,7 +23,8 @@
     <meta property="og:title" content="Thank You Page Template">
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
-  <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
+  <link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32">
+<link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16"><meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
   <body data-path-to-root="./" class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-header" id="sec-eb9e"><div class="u-clearfix u-sheet u-sheet-1">
         <img class="u-image u-image-contain u-image-default u-image-1" src="images/logo-white.png" alt="" data-image-width="2530" data-image-height="701" data-animation-name="customAnimationIn" data-animation-duration="1000">
       </div></header>
