--- a/TEDxADIS-Muroor-Youth.html
+++ b/TEDxADIS-Muroor-Youth.html
@@ -171,9 +171,9 @@ TEDx community">
             <div class="u-layout-row">
               <div class="u-align-left-lg u-align-left-md u-align-left-sm u-align-left-xl u-container-style u-layout-cell u-left-cell u-size-30 u-layout-cell-1">
                 <div class="u-container-layout u-container-layout-1">
-                  <h2 class="u-align-center-xs u-custom-font u-text u-text-custom-color-2 u-text-1">Location</h2>
-                  <p class="u-align-left-xs u-text u-text-2">Sheikh Zayed Auditorium, Abu Dhabi Indian School</p>
-                  <p class="u-align-left-xs u-text u-text-3">Muroor, Abu Dhabi</p>
+                  <h2 class="u-custom-font u-text u-text-custom-color-2 u-text-1">Location</h2>
+                  <p class="u-text u-text-2"> Sheikh Zayed Auditorium<br>Al - 23rd St., Salama Bint Butti St - Muroor Rd<br>Abu Dhabi,&nbsp;United Arab Emirates
+                  </p>
                 </div>
               </div>
               <div class="u-container-style u-layout-cell u-right-cell u-size-30 u-layout-cell-2">
