--- a/index.html
+++ b/index.html
@@ -128,11 +128,10 @@ TEDx community">
           <div class="u-carousel-inner u-gallery-inner" role="listbox">
             <div class="u-active u-carousel-item u-effect-fade u-gallery-item u-carousel-item-1">
               <div class="u-back-slide" data-image-width="853" data-image-height="569">
-                <img class="u-back-image u-expanded" src="images/IMG-20230923-WA0005.jpg">
+                <img class="u-back-image u-expanded" src="images/IMG-20230923-WA0005.jpg" alt="TEDxYouth@ADIS">
               </div>
               <div class="u-align-center u-over-slide u-shading u-valign-bottom u-over-slide-1">
-                <h3 class="u-gallery-heading">Sample Title</h3>
-                <p class="u-gallery-text">Sample Text</p>
+                <h3 class="u-gallery-heading">TEDxYouth@ADIS</h3>
               </div>
             </div>
             <div class="u-carousel-item u-effect-fade u-gallery-item u-carousel-item-2">
@@ -140,15 +139,16 @@ TEDx community">
                 <img class="u-back-image u-expanded" src="images/IMG-20230923-WA0004.jpg">
               </div>
               <div class="u-align-center u-over-slide u-shading u-valign-bottom u-over-slide-2">
-                <h3 class="u-gallery-heading">Sample Title</h3>
-                <p class="u-gallery-text">Sample Text</p>
+                <h3 class="u-gallery-heading">TEDxYouth@ADIS Team</h3>
               </div>
             </div>
             <div class="u-carousel-item u-effect-fade u-gallery-item u-carousel-item-3" data-image-width="847" data-image-height="561">
               <div class="u-back-slide">
-                <img class="u-back-image u-expanded" src="images/IMG-20230923-WA0011.jpg">
+                <img class="u-back-image u-expanded" src="images/IMG-20230923-WA0011.jpg" alt="TEDxYouth@ADIS">
               </div>
-              <div class="u-align-center u-over-slide u-shading u-valign-bottom u-over-slide-3"></div>
+              <div class="u-align-center u-over-slide u-shading u-valign-bottom u-over-slide-3">
+                <h3 class="u-gallery-heading">TEDxYouth@ADIS</h3>
+              </div>
               <style data-mode="XL"></style>
               <style data-mode="LG"></style>
               <style data-mode="MD"></style>
@@ -157,9 +157,11 @@ TEDx community">
             </div>
             <div class="u-carousel-item u-effect-fade u-gallery-item u-carousel-item-4" data-image-width="847" data-image-height="561">
               <div class="u-back-slide">
-                <img class="u-back-image u-expanded" src="images/IMG-20230923-WA0007.jpg">
+                <img class="u-back-image u-expanded" src="images/IMG-20230923-WA0007.jpg" alt="TEDxYouth@ADIS">
               </div>
-              <div class="u-align-center u-over-slide u-shading u-valign-bottom u-over-slide-4"></div>
+              <div class="u-align-center u-over-slide u-shading u-valign-bottom u-over-slide-4">
+                <h3 class="u-gallery-heading">TEDxYouth@ADIS</h3>
+              </div>
               <style data-mode="XL"></style>
               <style data-mode="LG"></style>
               <style data-mode="MD"></style>
