--- a/TEDxADIS-Muroor-Youth.html
+++ b/TEDxADIS-Muroor-Youth.html
@@ -112,13 +112,13 @@ TEDx community">
       </div>
     </section>
     <section class="u-black u-clearfix u-section-3" id="sec-df5d">
-      <div class="u-clearfix u-sheet u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-middle-xs u-sheet-1">
         <h5 class="u-custom-font u-text u-text-custom-color-2 u-text-default u-text-1">History</h5>
         <p class="u-custom-font u-font-lato u-text u-text-2">Our journey began  on October 15, 2017 with the inaugural TEDxYouth@ADIS event, where we first embarked on a mission to provide a platform for young thinkers and doers to share their ideas and inspire change. <br>
           <br>Following the resounding success of our first edition, we returned even stronger on October 7, 2018, for our second edition. It was a day filled with insightful talks, engaging discussions, and the celebration of youthful creativity. <br>
           <br>Today, we proudly present the third edition of TEDxADIS Muroor Youth, building on the foundation of our past experiences and pushing the boundaries of inspiration further than ever before. As we continue to evolve and innovate, we invite you to be a part of this exciting journey towards a brighter and more dynamic future. Welcome to TEDxADIS Muroor Youth 2023!<br>
         </p>
-        <div class="custom-expanded u-carousel u-gallery u-gallery-slider u-layout-carousel u-lightbox u-no-transition u-show-text-on-hover u-gallery-1" data-interval="5000" data-u-ride="carousel" id="carousel-d255">
+        <div class="u-carousel u-expanded-width-xs u-gallery u-gallery-slider u-layout-carousel u-lightbox u-no-transition u-show-text-on-hover u-gallery-1" data-interval="5000" data-u-ride="carousel" id="carousel-d255">
           <ol class="u-absolute-hcenter u-carousel-indicators u-carousel-indicators-1">
             <li data-u-target="#carousel-d255" data-u-slide-to="0" class="u-active u-grey-70 u-shape-circle" style="width: 10px; height: 10px;"></li>
             <li data-u-target="#carousel-d255" data-u-slide-to="1" class="u-grey-70 u-shape-circle" style="width: 10px; height: 10px;"></li>
@@ -194,7 +194,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
             </span>
           </a>
         </div>
-        <img class="u-image u-image-default u-image-1" src="images/IMG-20230923-WA0010.jpg" alt="" data-image-width="1080" data-image-height="819">
+        <img class="u-expanded-width-xs u-image u-image-default u-image-1" src="images/IMG-20230923-WA0010.jpg" alt="" data-image-width="1080" data-image-height="819">
       </div>
     </section>
     <section class="u-align-center u-black u-clearfix u-section-4" id="sec-5437">
