--- a/Team.html
+++ b/Team.html
@@ -68,7 +68,7 @@
         <h6 class="u-align-center u-custom-font u-text u-text-custom-color-2 u-text-default u-text-7">co-organizer</h6>
         <img class="u-image u-image-circle u-image-4" src="images/WhatsAppImage2023-10-18at21.16.17_d8ca4509.jpg" alt="" data-image-width="377" data-image-height="520">
         <img class="u-image u-image-circle u-image-5" src="images/311889191_1251990822415769_6333576377281548331_n.jpg" alt="" data-image-width="640" data-image-height="640">
-        <img class="u-image u-image-circle u-image-6" src="images/1000_F_339459697_XAFacNQmwnvJRqe1Fe9VOptPWMUxlZP8.jpg" alt="" data-image-width="1000" data-image-height="1000">
+        <img class="u-image u-image-circle u-image-6" src="images/WhatsAppImage2023-10-23at18.05.32_31645aaa.jpg" alt="" data-image-width="1076" data-image-height="1280">
         <h6 class="u-custom-font u-text u-text-default u-text-8">jacob antony</h6>
         <h6 class="u-custom-font u-text u-text-default u-text-9">vidhi rakshe</h6>
         <h6 class="u-align-center u-custom-font u-text u-text-default u-text-10">liann susan</h6>
