--- a/Team.html
+++ b/Team.html
@@ -62,7 +62,7 @@
         <img class="u-image u-image-circle u-image-3" src="images/WhatsAppImage2023-09-27at19.10.58.jpg" alt="" data-image-width="328" data-image-height="660">
         <h6 class="u-align-center u-custom-font u-text u-text-default u-text-2"> Nikhilesh Kss</h6>
         <h6 class="u-custom-font u-text u-text-default u-text-3">Johan Sebastian</h6>
-        <h6 class="u-custom-font u-text u-text-default u-text-4">kayal jeyaseelan</h6>
+        <h6 class="u-align-center-xs u-custom-font u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-4">kayal jeyaseelan</h6>
         <h6 class="u-align-center u-custom-font u-text u-text-custom-color-2 u-text-default u-text-5">organizer</h6>
         <h6 class="u-align-center u-custom-font u-text u-text-custom-color-2 u-text-default u-text-6"> Executive Producer</h6>
         <h6 class="u-align-center u-custom-font u-text u-text-custom-color-2 u-text-default u-text-7">co-organizer</h6>
