--- a/TEDxADIS-Muroor-Youth.html
+++ b/TEDxADIS-Muroor-Youth.html
@@ -275,7 +275,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
             </div>
             <div class="u-align-left u-container-style u-list-item u-repeater-item">
               <div class="u-container-layout u-similar-container u-container-layout-6">
-                <img class="u-expanded-width u-image u-image-default u-image-6" alt="" data-image-width="1200" data-image-height="1600" src="images/image2.png">
+                <img class="u-expanded-width u-image u-image-default u-image-6" alt="" data-image-width="1080" data-image-height="1080" src="images/image21.png">
                 <h4 class="u-custom-font u-text u-text-custom-color-2 u-text-12">aditya<br>mallya
                 </h4>
                 <p class="u-text u-text-13"> A&nbsp;devoted actor, and a vibrant dancer who radiates boundless talent and energy. His passion for public speaking and performance is truly infectious, transcending boundaries and captivating audiences.</p>
@@ -303,6 +303,14 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
                 <h4 class="u-custom-font u-text u-text-custom-color-2 u-text-18">Neil&nbsp;<br>Thomas
                 </h4>
                 <p class="u-text u-text-19"> A&nbsp;self-professed Mallu hailing from Mumbai but having spent most of his life in the UAE. Neil likes to imagine he has a way with words, making him a captivating communicator. His love for everything politics contrasts with his serial obsession with stand-up comedy, creating a unique juxtaposition of interests.</p>
+              </div>
+            </div>
+            <div class="u-align-left u-container-style u-list-item u-repeater-item">
+              <div class="u-container-layout u-similar-container u-container-layout-10">
+                <img class="u-expanded-width u-image u-image-default u-image-10" alt="" data-image-width="2268" data-image-height="2268" src="images/IMG_6281.jpg">
+                <h4 class="u-custom-font u-text u-text-custom-color-2 u-text-20">Sofia<br>ann
+                </h4>
+                <p class="u-text u-text-21"> A&nbsp;multi-talented individual with an unwavering passion for baking, a deep love for playing the keyboard, and an interesting penchant for doomscrolling. Her interests traverse a wide spectrum of creativity and curiosity.</p>
               </div>
             </div>
           </div>
