--- a/Team.html
+++ b/Team.html
@@ -76,7 +76,7 @@
         <h6 class="u-align-center u-custom-font u-text u-text-custom-color-2 u-text-default u-text-12"> Operations</h6>
         <h6 class="u-align-center u-custom-font u-text u-text-custom-color-2 u-text-default u-text-13"> Operations</h6>
         <img class="u-image u-image-circle u-image-7" src="images/WhatsAppImage2023-10-21at18.59.04_65d14c6f.jpg" alt="" data-image-width="768" data-image-height="1024">
-        <img class="u-image u-image-circle u-image-8" src="images/WhatsAppImage2023-10-20at12.46.56_5108bb1a.jpg" alt="" data-image-width="3000" data-image-height="4000">
+        <img class="u-image u-image-circle u-image-8" src="images/WhatsAppImage2023-10-24at20.46.11_0fe4030f.jpg" alt="" data-image-width="3024" data-image-height="4032">
         <img class="u-image u-image-circle u-image-9" src="images/WhatsAppImage2023-10-21at22.41.30_ac980509.jpg" alt="" data-image-width="1200" data-image-height="1600">
         <h6 class="u-custom-font u-text u-text-default u-text-14">keegan d'silva</h6>
         <h6 class="u-custom-font u-text u-text-default u-text-15">Rijul menon</h6>
